Rework formatting and callback signature + docs
Move log entry out of the "comment" field. Callbacks must now return an
array with the user, action, page, and an optional comment instead of a
string.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,5 +7,6 @@
   "activitylog-desc": "Extension to add arbitrary hooks as log messages to Special:Log",
 	"activitylogpage": "Activity log",
 	"activitylogpagetext": "A log of acitivity specified by hooks.",
-	"activitylog-activity": "performed an Activity"
+	"logentry-activitylog-activity": "$1$4$3",
+	"logentry-activitylog-simpleactivity": "$4"
 }
