Use external messages in tandem with custom hooks
Instead of having a single word that's configured as the action, take a
messageKey that then allows external users to have more control over the
language that shows up in the log files.

Also allow arbitrary extra parameters to then be added for use in that
message if needed.  This removes the need for the comment.

Issue #1: Show more information about who did what when

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,6 +7,6 @@
   "activitylog-desc": "Extension to add arbitrary hooks as log messages to Special:Log",
 	"activitylogpage": "Activity log",
 	"activitylogpagetext": "A log of acitivity specified by hooks.",
-	"logentry-activitylog-activity": "$1$4$3",
-	"logentry-activitylog-simpleactivity": "$4"
+  "logentry-activitylog-activity": "$1 performed an Activity",
+  "logentry-activitylog-simpleactivity": "$1 performed activity $4"
 }
